--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <style>
 body {
-background-color: #f5f5f5;
+background-color: #f0e1ea;
   font-family: arial;
 }
 .glow {
@@ -37,11 +37,95 @@ background-color: #f5f5f5;
 		<div class="navbar">
 			<ul class="navlist">
 				<li><a href="index.html">Home</a></li>
-				<li><a href="artwork.html">Artwork</a></li>
 				<li><a href="about.html">About</a></li>
 				<li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
 				<li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
 			</ul>
 		</div>
-	</body>
+	
+<body>
+<!-- Header -->
+<div class="header">
+  <h1>Artwork</h1>
+  <p> My work composed of animations, sketches, and digital media pieces from De Anza, Foothill, and San José State </p>
+</div>
+<!-- portfolio grid -->
+<div class="portfolio"> 
+  <div class="container">
+      <div class="our-work">
+        <div>
+          <a href="StayHome.html">
+            <img src="images/StayHomeDemo.jpg" alt="stayhomedemo">
+          </a>
+        </div>
+        <div>
+          <a href="https://symartinez21.github.io/Metastuck.github.io/index.html">
+            <img src="images/stuck.png" alt="Quar-ad-venture">
+          </a>
+        </div>
+        <div>
+          <a href= "proj1.html">
+            <img src="images/proj1.png" alt="video">
+          </a>
+        </div>
+        <div>
+          <a href="proj2.html">
+            <img src="images/project2conceptart.png" alt="proj2">
+          </a>
+        <div>
+          <a href="flowersanctuary.html">
+            <img src="images/flowersanc.png" alt="minecraftmuseum">
+          </a>
+         <div>
+          <a href="tweet.html">
+            <img src="images/tweet.gif" alt="tweet">
+          </a> 
+        </div>
+        <div>
+           <a href="kanyequest.html">
+            <img src="images/kanyequest.png" alt="kanyequest">
+          </a>
+        </div>
+        <div>
+          <a href="cloudy.html">
+            <img src="images/cloudy404.jpg" alt="cloud404">
+          </a>
+        </div>
+        <div>
+          <a href="Flow.html">
+             <img src="images/flow.png" alt="free">
+           </a>
+          </div>
+        <div>
+            <img src="images/Processingportrait.png" alt="portrait">
+          </div>
+        <div>
+          <a href="invclk.html">
+            <img src="images/Invisi-cloak.png" alt="Invisi-cloak">
+            </a>
+          </div>
+        <div>
+          <a href="3dmashup.html">
+              <img src="images/3dmashup.png" alt="3dmashup">
+            </a>
+          </div>
+          <div>
+            <a href="citypopescape.html">
+              <img src="images/codeasart.jpg" alt="citypop">
+            </a>
+          </div>
+      <div>
+        <a href="pastel.html">
+          <img src="images/pastel.jpg" alt="pastel">
+        </a>
+		    </div>
+		    <div>
+        <a href="paintings.html">
+          <img src="images/painting3.png" alt="neon">
+        </a>
+		    </div>
+      </div>
+	</div>
+</body>
+	
 </html>
