--- a/index.html
+++ b/index.html
@@ -47,13 +47,12 @@ background-color: #f0e1ea;
 <!-- Header -->
 <div class="header">
   <h1>Artwork</h1>
-  <p> My work composed of animations, sketches, and digital media pieces from De Anza, Foothill, and San José State </p>
+  <p> My work composed of animations,  digital media pieces from De Anza, Foothill, and San José State </p>
 </div>
 <!-- portfolio grid -->
-<div class="portfolio"> 
-  <div class="container">
-      <div class="our-work">
-        <div>
+
+<section class="container">
+        <div class>
           <a href="StayHome.html">
             <img src="images/StayHomeDemo.jpg" alt="stayhomedemo">
           </a>
