--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@ background-color: #f0e1ea;
 </div>
 <!-- portfolio grid -->
 
-<section class="container">
-        <div class>
+<div class="main">
+        <div class= "gallery">
+            <div class="img">
           <a href="StayHome.html">
             <img src="images/StayHomeDemo.jpg" alt="stayhomedemo">
           </a>
