i think i needed to add another </div>
idk why the grid isn't appearing hngggg

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ background-color: #f0e1ea;
 				<li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
 			</ul>
 		</div>
+  </div>
 	
 <body>
 <!-- Header -->
