plugged in weird css into html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@ body {
 background-color: #f0e1ea;
   font-family: arial;
 }
+
+.content {
+  max-width: 500px;
+  margin: auto;
+  background: white;
+  padding: 10px;
+} 
+
 .glow {
   font-size: 40px;
   color: #fff;
