--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 		<meta charset= "UTF-8">
 		<link rel="stylesheet" type= "text/css" href="indexstyle.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-
 	</head>
 
 <div class="content">
@@ -19,7 +18,34 @@
 			</ul>
 		</div>
 
-	<!-- Header -->
+	<style>
+img {
+        border: 2px solid ##c4a7c3;
+        padding: 5px;
+      }
+      img:hover {
+        box-shadow: 5px 4px 10px #8B0000;
+      }
+
+.glow {
+  font-size: 40px;
+  color: #fff;
+  text-align: center;
+  -webkit-animation: glow 1s ease-in-out infinite alternate;
+  -moz-animation: glow 1s ease-in-out infinite alternate;
+  animation: glow 1s ease-in-out infinite alternate;
+}
+@-webkit-keyframes glow {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+  }
+  
+  to {
+    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+  }
+}
+
+  </style>
 
 <body>
 <div class="header">
@@ -28,14 +54,15 @@
 </div>
 <!-- portfolio grid -->
 
-<div class="main">
-        <div class= "gallery">
-            <div class="img">
-              <a href="StayHome.html">
+<div class="container">
+        <div class= "gallery-container">
+            <div class="image">
               <img src="images/StayHomeDemo.jpg" alt="stayhomedemo">
-              </a>
+              </div>
+               <a target="_blank" href="StayHome.html">
         </div>
-        <div>
+        <div class="gallery-container">
+          <div class="image">
           <a href="https://symartinez21.github.io/Metastuck.github.io/index.html">
             <img src="images/stuck.png" alt="Quar-ad-venture">
           </a>
