--- a/index.html
+++ b/index.html
@@ -57,21 +57,30 @@ img {
 <div class="container">
         <div class= "gallery-container">
             <div class="image">
+              <a target="_blank"  
+               href="StayHome.html">
               <img src="images/StayHomeDemo.jpg" alt="stayhomedemo">
-              </div>
-               <a target="_blank" href="StayHome.html">
-        </div>
+              </a>
+            </div>
+            </div> 
+     
         <div class="gallery-container">
-          <div class="image">
-          <a href="https://symartinez21.github.io/Metastuck.github.io/index.html">
+            <div class="image">
+              <a target="_blank"
+              href="https://symartinez21.github.io/Metastuck.github.io/index.html">
             <img src="images/stuck.png" alt="Quar-ad-venture">
           </a>
-        </div>
-        <div>
-          <a href= "proj1.html">
+            </div>
+            </div>
+
+        <div class="gallery-container">
+            <div class="image">   
+          <a target= "_blank"
+          href="proj1.html">
             <img src="images/proj1.png" alt="video">
           </a>
-        </div>
+            </div>
+            </div>
         <div>
           <a href="proj2.html">
             <img src="images/project2conceptart.png" alt="proj2">
