changing the links to say a target idk if that will make a difference

--- a/index.html
+++ b/index.html
@@ -81,22 +81,36 @@ img {
           </a>
             </div>
             </div>
-        <div>
-          <a href="proj2.html">
+
+        <div class="gallery-container">
+            <div class="image">
+          <a target= "_blank"
+          href="proj2.html">
             <img src="images/project2conceptart.png" alt="proj2">
           </a>
-        </div>
-        <div>
-          <a href="flowersanctuary.html">
+            </div>
+            </div>
+
+        <div class="gallery-container">
+            <div class="image">
+          <a target="_blank"
+          href="flowersanctuary.html">
             <img src="images/flowersanc.png" alt="minecraftmuseum">
           </a>
-        </div>
-         <div>
-          <a href="tweet.html">
+            </div>
+            </div>
+        
+        <div class="gallery-container">
+            <div class="image">
+          <a target="_blank"
+          href="tweet.html">
             <img src="images/tweet.gif" alt="tweet">
           </a> 
-        </div>
-        <div>
+            </div>
+            </div>
+            
+        <div class="gallery-container">
+            <div class="image">
            <a href="kanyequest.html">
             <img src="images/kanyequest.png" alt="kanyequest">
           </a>
