--- a/index.html
+++ b/index.html
@@ -108,36 +108,59 @@ img {
           </a> 
             </div>
             </div>
-            
+
         <div class="gallery-container">
             <div class="image">
-           <a href="kanyequest.html">
+           <a target="_blank"
+           href="kanyequest.html">
             <img src="images/kanyequest.png" alt="kanyequest">
           </a>
-        </div>
-        <div>
-          <a href="cloudy.html">
+            </div>
+            </div>
+
+        <div class="gallery-container">
+            <div class="image">
+          <a target="_blank"
+          href="cloudy.html">
             <img src="images/cloudy404.jpg" alt="cloud404">
           </a>
-        </div>
-        <div>
-          <a href="Flow.html">
+            </div>
+            </div>
+
+        <div class="gallery-container">
+            <div class="image">
+           <a target="_blank"
+           href="Flow.html">
              <img src="images/flow.png" alt="free">
            </a>
-          </div>
-        <div>
+            </div>
+            </div>
+
+        <div class="gallery-container">
+            <div class="image">
             <img src="images/Processingportrait.png" alt="portrait">
           </div>
-        <div>
-          <a href="invclk.html">
+          <div class="text"> Self Portrait created in Art 74</div>
+        </div>
+
+        <div class="gallery-container">
+          <div class="image">
+           <a target="_blank"
+           href="invclk.html">
             <img src="images/Invisi-cloak.png" alt="Invisi-cloak">
             </a>
           </div>
-        <div>
-          <a href="3dmashup.html">
-              <img src="images/3dmashup.png" alt="3dmashup">
-            </a>
           </div>
+
+        <div class="gallery-container">
+            <div class="image">
+          <a target="_blank"
+          href="3dmashup.html">
+              <img src="images/3dmashup.png" alt="3dmashup">
+          </a>
+            </div>
+            </div>
+
           <div>
             <a href="citypopescape.html">
               <img src="images/codeasart.jpg" alt="citypop">
