i better see this grid
i will start swinging - just finished changing all the individual links

--- a/index.html
+++ b/index.html
@@ -161,22 +161,31 @@ img {
             </div>
             </div>
 
-          <div>
-            <a href="citypopescape.html">
+        <div class="gallery-container">
+            <div class="image">
+          <a target="_blank"
+            href="citypopescape.html">
               <img src="images/codeasart.jpg" alt="citypop">
-            </a>
-          </div>
-      <div>
-        <a href="pastel.html">
-          <img src="images/pastel.jpg" alt="pastel">
-        </a>
-		    </div>
-		    <div>
-        <a href="paintings.html">
-          <img src="images/painting3.png" alt="neon">
-        </a>
-		    </div>
-      </div>
+          </a>
+            </div>
+            </div>
+
+        <div class="gallery-container">
+            <div class="image">
+          <a target="_blank" 
+           href="pastel.html">
+            <img src="images/pastel.jpg" alt="pastel">
+          </a>
+		        </div>
+            </div>
+
+		    <div class="gallery-container">
+            <div class="image">
+          <a target="_blank" href="paintings.html">
+            <img src="images/painting3.png" alt="neon">
+          </a>
+		        </div>
+            </div>
 	</div>
 </body>
 	
