mans forgot to include <div class="gallery-item">
bruh

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ img {
 
 <div class="container">
         <div class= "gallery-container">
+          <div class="gallery-item">
             <div class="image">
               <a target="_blank"  
                href="StayHome.html">
@@ -63,8 +64,10 @@ img {
               </a>
             </div>
             </div> 
+          </div>
      
         <div class="gallery-container">
+          <div class="gallery-item">
             <div class="image">
               <a target="_blank"
               href="https://symartinez21.github.io/Metastuck.github.io/index.html">
@@ -72,8 +75,10 @@ img {
           </a>
             </div>
             </div>
+          </div>
 
         <div class="gallery-container">
+          <div class="gallery-item">
             <div class="image">   
           <a target= "_blank"
           href="proj1.html">
@@ -81,8 +86,10 @@ img {
           </a>
             </div>
             </div>
+          </div>
 
         <div class="gallery-container">
+          <div class="gallery-item">
             <div class="image">
           <a target= "_blank"
           href="proj2.html">
@@ -90,8 +97,10 @@ img {
           </a>
             </div>
             </div>
+          </div>
 
         <div class="gallery-container">
+          <div class="gallery-item">
             <div class="image">
           <a target="_blank"
           href="flowersanctuary.html">
@@ -99,8 +108,10 @@ img {
           </a>
             </div>
             </div>
+          </div>
         
         <div class="gallery-container">
+          <div class="gallery-item">
             <div class="image">
           <a target="_blank"
           href="tweet.html">
@@ -108,8 +119,10 @@ img {
           </a> 
             </div>
             </div>
+          </div>
 
         <div class="gallery-container">
+          <<div class="gallery-item">
             <div class="image">
            <a target="_blank"
            href="kanyequest.html">
@@ -117,8 +130,10 @@ img {
           </a>
             </div>
             </div>
+          </div>
 
         <div class="gallery-container">
+          <div class="gallery-item">
             <div class="image">
           <a target="_blank"
           href="cloudy.html">
@@ -126,8 +141,10 @@ img {
           </a>
             </div>
             </div>
+          </div>
 
         <div class="gallery-container">
+          <div class="gallery-item">
             <div class="image">
            <a target="_blank"
            href="Flow.html">
@@ -135,15 +152,19 @@ img {
            </a>
             </div>
             </div>
+          </div>
 
         <div class="gallery-container">
+          <div class="gallery-item">
             <div class="image">
             <img src="images/Processingportrait.png" alt="portrait">
           </div>
           <div class="text"> Self Portrait created in Art 74</div>
         </div>
+      </div>
 
         <div class="gallery-container">
+          <div class="gallery-item">
           <div class="image">
            <a target="_blank"
            href="invclk.html">
@@ -151,8 +172,10 @@ img {
             </a>
           </div>
           </div>
+        </div>
 
         <div class="gallery-container">
+          <div class="gallery-item">
             <div class="image">
           <a target="_blank"
           href="3dmashup.html">
@@ -160,8 +183,10 @@ img {
           </a>
             </div>
             </div>
+          </div>
 
         <div class="gallery-container">
+          <div class="gallery-item">
             <div class="image">
           <a target="_blank"
             href="citypopescape.html">
@@ -169,8 +194,10 @@ img {
           </a>
             </div>
             </div>
+          </div>
 
         <div class="gallery-container">
+          <div class="gallery-item">
             <div class="image">
           <a target="_blank" 
            href="pastel.html">
@@ -178,14 +205,17 @@ img {
           </a>
 		        </div>
             </div>
+          </div>
 
 		    <div class="gallery-container">
+          <div class="gallery-item">
             <div class="image">
           <a target="_blank" href="paintings.html">
             <img src="images/painting3.png" alt="neon">
           </a>
 		        </div>
             </div>
+          </div>
 	</div>
 </body>
 	
