--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title> Sophia Martinez </title>
 		<meta charset= "UTF-8">
-		<link rel="stylesheet" type= "text/css" href="indexstyle.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type= "text/css" href="indexstyle.css" media="all">
+    <title> Sophia Martinez </title>
 	</head>
 
 <div class="content">
