--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ img {
           </div>
 
         <div class="gallery-container">
-          <<div class="gallery-item">
+          <div class="gallery-item">
             <div class="image">
            <a target="_blank"
            href="kanyequest.html">
