stay home is staying
description is ok, if i have time i would like the video to center or have the text next to it....lol likely not

--- a/StayHome.html
+++ b/StayHome.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <meta charset= "UTF-8">
-    <link rel="stylesheet" type= "text/css" href="artwork.css">
+    <link rel="stylesheet" type= "text/css" href="artwork.css" media="all">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--Navigation bar-->
 <head>
@@ -39,7 +39,7 @@ body {
 </style>
   </head>
   <body>
-<h1 class="glow">Sophia Martinez</h1>
+<h1 class="glow">Stay Home (Demo)</h1>
     <div class="navbar">
       <ul class="navlist">
         <li><a href="index.html">Home</a></li>
