boxing in the text to the center

--- a/StayHome.html
+++ b/StayHome.html
@@ -11,6 +11,11 @@ body {
   background-color: #f5f5f5;
   font-family: arial;
 }
+p {
+  position: absolute;
+  left: 100px;
+  top: 150px;
+}
    .content {
   max-width: 500px;
   margin: auto;
