--- a/StayHome.html
+++ b/StayHome.html
@@ -9,11 +9,12 @@
 <style>
 body {
   background-color: #f5f5f5;
-  font-family: arial;
+  font-family: monospace;
 }
 p {
   position: absolute;
-  left: 100px;
+  left:100px;
+  right:100px;
   top: 500px;
 }
    .content {
