--- a/StayHome.html
+++ b/StayHome.html
@@ -7,16 +7,7 @@
 <head>
     <title> Sophia Martinez </title>
 <style>
-body {
-  background-color: #f5f5f5;
-  font-family: monospace;
-}
-p {
-  position: absolute;
-  left:100px;
-  right:100px;
-  top: 500px;
-}
+
    .content {
   max-width: 500px;
   margin: auto;
@@ -62,7 +53,7 @@ p {
 
 <h3>Medium: Premiere Pro, Photoshop, DSLR Camera, iPhoneXR</h3>
 
-<h3>Dimension: 1920x1080p </h3>>
+<h3>Dimension: 1920x1080p </h3>
 
 <p> I wanted to apply the video editing knowledge I've learned throughout the semester to create this video of what would be a demo for a video game! It's quarantine-themed but I also understand that theme is running dry and I would have to make it more interesting somehow. I tried this adventure game concept in my previous project and wanted to expand on it! The music comes from old classic video games that I grew up playing, and the graphics are inspired by video games for the Nintendo Gameboy.
 I alternated between using my Canon EOS DSLR and my iphone to record the video to broaden my range of quality. Using the DSLR I wanted more depth of field and different colors that I feel would be flat on iphone. Adding the video footage together in premiere was fun and I enjoyed filming and acting for this project!</p>
