--- a/citypopescape.html
+++ b/citypopescape.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
+<head>
 <meta charset= "UTF-8">
     <link rel="stylesheet" type= "text/css" href="artwork.css" media="all">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--Navigation bar-->
-<head>
-    <title> Sophia Martinez </title>
+    <title> Citypop Escape </title>
+  </head>
 <style>
 
    .content {
@@ -34,7 +34,7 @@
   }
 }
 </style>
-  </head>
+
 
   <body>
 <h1 class="glow">Stay Home (Demo)</h1>
