--- a/citypopescape.html
+++ b/citypopescape.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 <meta charset= "UTF-8">
-    <link rel="stylesheet" type= "text/css" href="artwork.css" media="all">
+    <link rel="stylesheet" type= "text/css" href="citypop.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Citypop Escape </title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.0/processing.min.js"></script>
   </head>
 <style>
 
@@ -33,10 +34,11 @@
     text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
   }
 }
+
 </style>
 
 
-  <body>
+
 <h1 class="glow">Stay Home (Demo)</h1>
     <div class="navbar">
       <ul class="navlist">
@@ -46,7 +48,7 @@
         <li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
       </ul>
     </div>
-  </body>
+
   <!--end of Nav bar-->
 
   <body>
@@ -54,6 +56,90 @@
     <h2> "CityPop Escape" </h2>
     <p> I created this artwork in processing, and am proud of how this turned out! The aesthetic inspiration comes from my love of citypop music and my favorite childhood anime Sailor moon. 
       The audience can interact with the artwork and flicker the lights of the buildings. </p>
+  <script type="application/processing">
+PImage img;
+float offset = 0;
+float easing = 0.05;
+
+void setup() {
+  noStroke();
+  size(900, 960);
+  img = loadImage("cloud.png");  // Load an image into the program 
+  Test t = new Test();
+  t.display();
+}
+
+class Test {
+  PImage img;
+  Test() {
+    // where abstractimage5.jpg is stored to the data directory
+    img = loadImage("cloud.png");
+  }
+ 
+  void display() {
+    img.resize(width,height);
+    background(img);
+  }
+}
+
+void draw(){
+  background(#3E5C8B);
+beginShape() ; //moon
+fill(#F0ECC6);
+vertex(30, 20);
+bezierVertex(80, 0, 80, 75, 30, 75);
+bezierVertex(50, 80, 60, 25, 30, 20);
+endShape();
+  fill(#11155D);
+  strokeWeight(2);
+  beginShape(); //building
+  vertex(0, 409);
+  vertex(174, 409);
+  vertex(174, 210);
+  vertex(503, 210);
+  vertex(503, 497);
+  vertex(747, 497);
+  vertex(747, 53);
+  vertex(960, 51);
+  vertex(960, 900);
+  vertex(0, 900);
+  vertex(0, 409);
+  endShape(CLOSE);
+
+ rectMode(CENTER);
+ if ((mouseX > 40) && (mouseX < 80) &&
+    (mouseY > 20) && (mouseY < 80)) {
+ fill(#F0ECC6); //yellow light
+rect(221, 696, 36, 54);
+ rect(461, 542, 36, 54);
+  rect(794, 692, 36, 54);
+ rect(794, 542, 36, 54);
+  rect(546, 759, 36, 54);
+ rect(794, 390, 36, 54);
+ rect(546, 596, 36, 54);
+ rect(887, 390, 36, 54);
+rect(887, 692, 36, 54);
+ } else {
+    fill(#F0C6D1); //pink light
+  }
+   rect(461, 759, 36, 54);
+   rect(105, 469, 36, 54);
+   rect(221, 382, 36, 54);
+ rect(105, 584, 36, 54);
+ rect(221, 286, 36, 54);
+  rect(546, 849, 36, 54);
+  rect(794, 259, 36, 54);
+rect(794, 113, 36, 54);
+rect(887, 113, 36, 54);
+
+image(img, 350, 400);  // Display at full opacity
+  float dx = (mouseX-img.width/2) - offset;
+  offset += dx * easing; 
+  tint(255, 127);  // Display at half opacity
+  image(img, offset, 0);
+  
+}
+</script>
     <canvas data-processing-sources="media/CityPopEscape.pde"></canvas>
   </body>
   </html>
