--- a/citypopescape.html
+++ b/citypopescape.html
@@ -5,7 +5,6 @@
     <link rel="stylesheet" type= "text/css" href="citypop.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Citypop Escape </title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.0/processing.min.js"></script>
   </head>
 <style>
 
@@ -37,7 +36,7 @@
 
 </style>
 
-
+ <body>
 
 <h1 class="glow">Citypop Escape</h1>
     <div class="navbar">
@@ -48,94 +47,12 @@
         <li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
       </ul>
     </div>
-
-  <!--end of Nav bar-->
-
-  <body>
+  </body>
 
     <h2> Title: "CityPop Escape" </h2>
-    <p> I created this artwork in processing, and am proud of how this turned out! The aesthetic inspiration comes from my love of citypop music and my favorite childhood anime Sailor moon. 
-      The audience can interact with the artwork and flicker the lights of the buildings. </p>
-  <script type="application/processing">
+    <p>
+      One of the most challenging projects I have worked on for Art 74, and one of my first attempts with code. I created this project in Processing 3, and am proud of how this turned out! The aesthetic inspiration comes from my love of citypop music and my favorite childhood anime Sailor moon. Citypop music utilizes retro 80s Japanese pop, and fans of the genre in modern times create visuals to accompany the music with retro Japanese anime clips. The color scheme is reminiscent of the color palette used in Citypop visuals, and the visuals in this Processing sketch draw inspiration from late 90s anime Sailor Moon.The audience can interact with the sketch by hovering the cursor over the moon and dragging the cloud across the sketch. </p>
+      <a href="citypopcode.html">This is the code</a>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/6nxHOiSv7Oo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-void setup() {
-  noStroke();
-  size(900, 960);
-  img = loadImage("cloud.png");  // Load an image into the program 
-  Test t = new Test();
-  t.display();
-}
-
-class Test {
-  PImage img;
-  Test() {
-    // where abstractimage5.jpg is stored to the data directory
-    img = loadImage("cloud.png");
-  }
- 
-  void display() {
-    img.resize(width,height);
-    background(img);
-  }
-}
-
-void draw(){
-  background(#3E5C8B);
-beginShape() ; //moon
-fill(#F0ECC6);
-vertex(30, 20);
-bezierVertex(80, 0, 80, 75, 30, 75);
-bezierVertex(50, 80, 60, 25, 30, 20);
-endShape();
-  fill(#11155D);
-  strokeWeight(2);
-  beginShape(); //building
-  vertex(0, 409);
-  vertex(174, 409);
-  vertex(174, 210);
-  vertex(503, 210);
-  vertex(503, 497);
-  vertex(747, 497);
-  vertex(747, 53);
-  vertex(960, 51);
-  vertex(960, 900);
-  vertex(0, 900);
-  vertex(0, 409);
-  endShape(CLOSE);
-
- rectMode(CENTER);
- if ((mouseX > 40) && (mouseX < 80) &&
-    (mouseY > 20) && (mouseY < 80)) {
- fill(#F0ECC6); //yellow light
-rect(221, 696, 36, 54);
- rect(461, 542, 36, 54);
-  rect(794, 692, 36, 54);
- rect(794, 542, 36, 54);
-  rect(546, 759, 36, 54);
- rect(794, 390, 36, 54);
- rect(546, 596, 36, 54);
- rect(887, 390, 36, 54);
-rect(887, 692, 36, 54);
- } else {
-    fill(#F0C6D1); //pink light
-  }
-   rect(461, 759, 36, 54);
-   rect(105, 469, 36, 54);
-   rect(221, 382, 36, 54);
- rect(105, 584, 36, 54);
- rect(221, 286, 36, 54);
-  rect(546, 849, 36, 54);
-  rect(794, 259, 36, 54);
-rect(794, 113, 36, 54);
-rect(887, 113, 36, 54);
-
-image(img, 350, 400);  // Display at full opacity
-  float dx = (mouseX-img.width/2) - offset;
-  offset += dx * easing; 
-  tint(255, 127);  // Display at half opacity
-  image(img, offset, 0);
-}
-</script>
-    <canvas id="sketch" tabindex="0" width="900" height="960" style="image-rendering: -webkit-optimize-contrast !important;"> </canvas>" 
-  </body>
   </html>
