--- a/citypopescape.html
+++ b/citypopescape.html
@@ -48,11 +48,13 @@
       </ul>
     </div>
   </body>
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/6nxHOiSv7Oo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <h2> Title: "CityPop Escape" </h2>
     <p>
-      One of the most challenging projects I have worked on for Art 74, and one of my first attempts with code. I created this project in Processing 3, and am proud of how this turned out! The aesthetic inspiration comes from my love of citypop music and my favorite childhood anime Sailor moon. Citypop music utilizes retro 80s Japanese pop, and fans of the genre in modern times create visuals to accompany the music with retro Japanese anime clips. The color scheme is reminiscent of the color palette used in Citypop visuals, and the visuals in this Processing sketch draw inspiration from late 90s anime Sailor Moon.The audience can interact with the sketch by hovering the cursor over the moon and dragging the cloud across the sketch. </p>
-      <a href="citypopcode.html">This is the code</a>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/6nxHOiSv7Oo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      One of the most challenging projects I have worked on for Art 74, and one of my first attempts with code. I created this project in Processing 3, and am proud of how this turned out! The aesthetic inspiration comes from my love of citypop music and my favorite childhood anime Sailor moon. Citypop music utilizes retro 80s Japanese pop, and fans of the genre in modern times create visuals to accompany the music with retro Japanese anime clips. The color scheme is reminiscent of the color palette used in Citypop visuals, and the visuals in this Processing sketch draw inspiration from late 90s anime Sailor Moon.The audience can interact with the sketch by hovering the cursor over the moon and dragging the cloud across the sketch. 
+      <a href="eportfolio/citypopcode.html">This is the code</a> 
+    </p>
+
+  
 
   </html>
