including rotten pumpkin

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ img {
             </div>
             </div>
           </div>
-     
+
         <div class="gallery-container">
           <div class="gallery-item">
             <div class="image">
@@ -93,7 +93,7 @@ img {
             <div class="image">   
           <a target= "_blank"
           href="proj1.html">
-            <img src="images/proj1.png" alt="video">
+            <img src="media/rottenpumpkinthumbnail.png" alt="pumpkin">
           </a>
             </div>
             </div>
