--- a/proj1.html
+++ b/proj1.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html>
 <meta charset= "UTF-8">
-    <link rel="stylesheet" href="artwork.css">
-    <meta name="viewport" >
-<!--Navigation bar-->
+    <link rel="stylesheet" type= "text/css" href="artwork.css" media="all">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
     <title> Sophia Martinez </title>
 <style>
-body {
-  background-color: #f5f5f5;
-  font-family: arial;
-}
+
    .content {
   max-width: 500px;
   margin: auto;
@@ -39,11 +35,10 @@ body {
 </style>
   </head>
   <body>
-<h1 class="glow">Sophia Martinez</h1>
+<h1 class="glow">Rotten Pumpkin</h1>
     <div class="navbar">
       <ul class="navlist">
         <li><a href="index.html">Home</a></li>
-        <li><a href="artwork.html">Artwork</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
         <li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
@@ -51,11 +46,17 @@ body {
     </div>
   </body>
   <!--end of Nav bar-->
-<iframe width="560" height="315" src="https://www.youtube.com/embed/KWJfy6UAh38" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<h3>Transience: Capturing the Subtle Things in Life </h3>
-<p> Year: 2020
-Medium: Full HD Color Video, 00"02"14
-Description:  My work was inspired by the style of video captured in vlogs on youtube and stories on social media found on Instagram and Snapchat. My goal was to create an aesthetically pleasing video and experimenting with color correction. What I have learned to appreciate about vlogs is that the footage captured means something to the videographer, and that they wish to share their vision and experience with others. 
+<a target="_blank"
+            href="https://symartinez21.github.io/rottenpumpkin/">
+              <img src="rottenpumpkinthumbnail.png" alt="pumpkin">
+          </a>
+<h2>Title: Rotten Pumpkin Website </h2>
+<h2>Medium: html5, css </h2>
+<h2>Year: 2019</h2>
+<p> 
+In Art74 we learned the basics towards building websites! As a 3rd grader in elementary school before the start of social media, a friend introduced me to a website builder. I remember obsessively looking for ways to decorate my page using codes designated for myspace and embeding flash games to share with my friends. Using elements such as custom cursors and decorative sprite gifs inspired the aesthetic behind the website. Halloween was an upcoming holiday around the production of this website which is why it is Halloween themed, and creating a parody of the website Rotten Tomatoes inspired the purpose for Rotten Pumpkin! Users would rate their favorite Halloween-themed movies using the rating widget and are encouraged leave reviews.
 </p>
+
+
 
 </html>
