--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ img {
           <div class="gallery-item">
             <div class="image">   
           <a target= "_blank"
-          href="proj1.html">
+          href="rottenpumpkin.html">
             <img src="images/rottenpumpkinthumbnail.png" alt="pumpkin">
           </a>
             </div>
