description and text updated

--- a/proj2.html
+++ b/proj2.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html>
 <meta charset= "UTF-8">
-    <link rel="stylesheet" type= "text/css" href="artwork.css">
+    <link rel="stylesheet" type= "text/css" href="artwork.css" media="all">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--Navigation bar-->
 <head>
-    <title> Video Art As Installation </title>
+    <title> Sophia Martinez </title>
 <style>
-body {
-  background-color: #f5f5f5;
-  font-family: arial;
-}
+
    .content {
   max-width: 500px;
   margin: auto;
@@ -39,11 +35,10 @@ body {
 </style>
   </head>
   <body>
-<h1 class="glow">Sophia Martinez</h1>
+<h1 class="glow">Work As Usual (2021)</h1>
     <div class="navbar">
       <ul class="navlist">
         <li><a href="index.html">Home</a></li>
-        <li><a href="artwork.html">Artwork</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
         <li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
@@ -52,38 +47,13 @@ body {
   </body>
   <!--end of Nav bar-->
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/n3xxroGiAYY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<img src="/images/rainbow.jpg" alt="rainbow">
-<img src="project2conceptart.png" alt="project2conceptart">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ch070idC0vc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<h3>Spherical Magic Spill</h3>
-<h2> Date: 3/16/20
-Medium: TouchDesign, glass
-</h2>
-<h2> video 1280x1280 </h2>
-      <p>My project Spherical Magic Spill follows a similar theme to the video collage I created for
-the last assignment. I enjoy the colors and overall aesthetic of citypop and “vintage”
-80s-90s anime, which lead me to be inspired by Sailor Moon . In the concept art I drew, I
-initially wanted to bring more focus to the Sailor Moon theme and project onto a small
-blank white mirror with a silhouette of a rabbit. But I believed a crystal ball would be a
-stronger and more interesting installation. One of the first villains in the series wields her
-own crystal ball that gives her powers and allows her to oversee her enemies. When I
-learned that artists use projectors for their installations, that reminded me of Halloween
-decorations that use crystal balls. Fancier decorations will project a smaller image within
-the ball of a face, but I understand achieving that would require more engineering skills
-that I am not familiar with. So for this project I thought that attempting to emulate light in a
-dazzling way was more achievable for me through the crystal ball. Using a rainbow color
-palette inspired by vintage Japanese shoujo anime, I intended to create imagery that was
-reminiscent of the inside of a kaleidoscope. However I found Touchdesigner complicated
-and eventually followed a tutorial on particle displacement, which I thought was along the
-lines of my artistic vision for this project.
-For my materials I went to Dollar Tree and picked up a glass bowl (and broke it on
-the way home) and gathered small transparent gems (materials pictured below). Initially I
-was going to place the bowl with the gems inside and project through my materials using
-the school projector, but due to the coronavirus affecting my ability to enter campus, I had
-to improvise. I would set up my installation in a dark environment and use my Macbook
-screen to display the video I created on Touchdesigner. Then I would place the bowl on
-top of the screen and place the installation against a wall so that the projected image can
-be seen on a larger scale.</p>
+<h2>Title: Work As Usual (2021)</h2>
+<h2>Medium: Clip Studio Paint</h2>
+<h2>Dimensions: 1920x1080p </h2>
+
+      <p>This digitally drawn 2D looping animation was inspired by Youtube videos that livestream chill lo-fi music with relaxing and complimentary animations. In comparison to animating in Photoshop, I had the creative freedom to add more details and "paint" through Clip Studio Paint. This piece also reflects the work-from-home status due to the COVID-19 pandemic. I plan to continue polishing this animation and gradually add more minor movements; for instance letting the clouds roll by in the background and show the dog in the corner silently breathing as he sleeps.
+</p>
 
 </html>
