--- a/StayHome.html
+++ b/StayHome.html
@@ -3,7 +3,6 @@
 <meta charset= "UTF-8">
     <link rel="stylesheet" type= "text/css" href="artwork.css" media="all">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--Navigation bar-->
 <head>
     <title> Sophia Martinez </title>
 <style>
@@ -53,7 +52,7 @@
 
 <h2>Medium: Premiere Pro, Photoshop, DSLR Camera, iPhoneXR</h2>
 
-<h2>Dimension: 1920x1080p </h2>
+<h2>Dimensions: 1920x1080p </h2>
 
 <p> I wanted to apply the video editing knowledge I've learned throughout the semester to create this video of what would be a demo for a video game! It's quarantine-themed but I also understand that theme is running dry and I would have to make it more interesting somehow. I tried this adventure game concept in my previous project and wanted to expand on it! The music comes from old classic video games that I grew up playing, and the graphics are inspired by video games for the Nintendo Gameboy.
 I alternated between using my Canon EOS DSLR and my iphone to record the video to broaden my range of quality. Using the DSLR I wanted more depth of field and different colors that I feel would be flat on iphone. Adding the video footage together in premiere was fun and I enjoyed filming and acting for this project!</p>
