--- a/proj1.html
+++ b/proj1.html
@@ -48,7 +48,7 @@
   <!--end of Nav bar-->
 <a target="_blank"
             href="https://symartinez21.github.io/rottenpumpkin/">
-              <img src="images/rottenpumpkinthumbnail.png" alt="link to website">
+              <img src="images/rottenpumpkinthumbnail.png" alt="link to website" style="width:1000px;height:1000px;">
           </a>
 <h2>Title: Rotten Pumpkin Website </h2>
 <h2>Medium: html5, css </h2>
