--- a/index.html
+++ b/index.html
@@ -92,20 +92,20 @@ img {
           <div class="gallery-item">
             <div class="image">
           <a target= "_blank"
-          href="proj2.html">
-            <img src="images/project2conceptart.png" alt="proj2">
+          href="workfromhome.html">
+            <img src="images/WorkAsUsual.png" alt="CSPanimation">
           </a>
             </div>
             </div>
           </div>
 
-        <div class="gallery-container">
+          <div class="gallery-container">
           <div class="gallery-item">
             <div class="image">
-          <a target="_blank"
-          href="flowersanctuary.html">
-            <img src="images/flowersanc.png" alt="minecraftmuseum">
-          </a>
+           <a target="_blank"
+           href="Flow.html">
+             <img src="images/flow.png" alt="free">
+           </a>
             </div>
             </div>
           </div>
@@ -143,17 +143,7 @@ img {
             </div>
           </div>
 
-        <div class="gallery-container">
-          <div class="gallery-item">
-            <div class="image">
-           <a target="_blank"
-           href="Flow.html">
-             <img src="images/flow.png" alt="free">
-           </a>
-            </div>
-            </div>
-          </div>
-
+        
         <div class="gallery-container">
           <div class="gallery-item">
             <div class="image">
