rottenpumpkin is the right html not proj1
oh no which one is it

--- a/proj2.html
+++ b/proj2.html
@@ -35,7 +35,7 @@
 </style>
   </head>
   <body>
-<h1 class="glow">Rotten Pumpkin</h1>
+<h1 class="glow">Work As Usual (2021)</h1>
     <div class="navbar">
       <ul class="navlist">
         <li><a href="index.html">Home</a></li>
@@ -46,17 +46,14 @@
     </div>
   </body>
   <!--end of Nav bar-->
-<a target="_blank"
-            href="https://symartinez21.github.io/rottenpumpkin/">
-              <img src="images/rottenpumpkinthumbnail.png" alt="link to website" style="width:1314px; height:800px;">
-          </a>
-<h2>Title: Rotten Pumpkin Website </h2>
-<h2>Medium: html5, css </h2>
-<h2>Year: 2019</h2>
-<p> 
-In Art74 we learned the basics towards building websites! As a 3rd grader in elementary school before the start of social media, a friend introduced me to a website builder. I remember obsessively looking for ways to decorate my page using codes designated for myspace and embeding flash games to share with my friends. Using elements such as custom cursors and decorative sprite gifs inspired the aesthetic behind the website. Halloween was an upcoming holiday around the production of this website which is why it is Halloween themed, and creating a parody of the website Rotten Tomatoes inspired the purpose for Rotten Pumpkin! Users would rate their favorite Halloween-themed movies using the rating widget and are encouraged leave reviews.
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ch070idC0vc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<h2>Title: Work As Usual (2021)</h2>
+<h2>Medium: Clip Studio Paint</h2>
+<h2>Dimensions: 1920x1080p </h2>
+
+      <p>This digitally drawn 2D looping animation was inspired by Youtube videos that livestream chill lo-fi music with relaxing and complimentary animations. In comparison to animating in Photoshop, I had the creative freedom to add more details and "paint" through Clip Studio Paint. This piece also reflects the work-from-home status due to the COVID-19 pandemic. I plan to continue polishing this animation and gradually add more minor movements; for instance letting the clouds roll by in the background and show the dog in the corner silently breathing as he sleeps.
 </p>
-
-
 
 </html>
