--- a/rottenpumpkin.html
+++ b/rottenpumpkin.html
@@ -48,7 +48,7 @@
   <!--end of Nav bar-->
 <a target="_blank"
             href="https://symartinez21.github.io/rottenpumpkin/">
-              <img src="rottenpumpkinthumbnail.png" alt="pumpkin">
+              <img src="rottenpumpkinthumbnail.png" alt="pumpkin style" style="width:1314px; height:800px;">
           </a>
 <h2>Title: Rotten Pumpkin Website </h2>
 <h2>Medium: html5, css </h2>
