--- a/Flow.html
+++ b/Flow.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html>
 <meta charset= "UTF-8">
-    <link rel="stylesheet" type= "text/css" href="artwork.css">
+    <link rel="stylesheet" type= "text/css" href="artwork.css" media="all">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--Navigation bar-->
 <head>
     <title> Sophia Martinez </title>
 <style>
-body {
-  background-color: #f5f5f5;
-  font-family: arial;
-}
+
    .content {
   max-width: 500px;
   margin: auto;
@@ -26,6 +22,7 @@ body {
   -moz-animation: glow 1s ease-in-out infinite alternate;
   animation: glow 1s ease-in-out infinite alternate;
 }
+
 @-webkit-keyframes glow {
   from {
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
@@ -38,28 +35,25 @@ body {
 </style>
   </head>
   <body>
-<h1 class="glow">Sophia Martinez</h1>
+<h1 class="glow">Stay Home (Demo)</h1>
     <div class="navbar">
       <ul class="navlist">
         <li><a href="index.html">Home</a></li>
-        <li><a href="artwork.html">Artwork</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
         <li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
       </ul>
     </div>
   </body>
-  <!--end of Nav bar-->
-
-<body>
-
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/9XsXbshpqrs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
-    
-<p> Flow, 9/30/19, 
-Used my Makoto Tachibana figma to make a stop motion video. Then I was experimenting with after effects and wanted to replicate the painted streak effect that I see when people edit dance videos.    </p>
+<h2> Title: Flow </h2>
+<h2> Medium: iPhone XR, Adobe After Effects</h2>
+<h2> Dimensions: 1920x1080p </h2>
+
+<p>
+Before I transferred to San José State I attended animation classes at DeAnza College to prepare for the animation program. In this project I learned stop motion animation and used a flexible ball-joint figurine to capture the movement. In Art 74 the assignment was to create an augmented reality (AR) graphic, and I found inspiration from edits of dance videos on Youtube. This project allowed me to try Adobe After Effects, which allowed me to draw on the video and create the visual effects seen in the video. I enjoyed drawing the suggestion of movement and imagining the energy through the animation! </p>
 
 
-</body>
 </html>
