--- a/kanyequest.html
+++ b/kanyequest.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
 <html>
 <meta charset= "UTF-8">
-    <link rel="stylesheet" type= "text/css" href="artwork.css">
+    <link rel="stylesheet" type= "text/css" href="artwork.css" media="all">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-<!--Navigation bar-->
 <head>
     <title> Sophia Martinez </title>
 <style>
-body {
-  background-color: #f5f5f5;
-  font-family: arial;
-}
 
-    .content {
+   .content {
   max-width: 500px;
   margin: auto;
-  background: white;
-  padding: 5px;
+  background: #f5f5f5;
+  padding: 10px;
 }
+    
 .glow {
   font-size: 40px;
   color: #fff;
@@ -40,30 +35,36 @@ body {
 </style>
   </head>
   <body>
-  <div class="content">
-<h1 class="glow">Sophia Martinez</h1>
+<h1 class="glow">Kanye Quest</h1>
     <div class="navbar">
       <ul class="navlist">
         <li><a href="index.html">Home</a></li>
-        <li><a href="artwork.html">Artwork</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="https://www.instagram.com/scribbledstarart/">Instagram</a></li>
         <li><a href="https://scribbledstar-art.tumblr.com/">Tumblr</a></li>
       </ul>
     </div>
   </body>
-  <!--end of Nav bar-->
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/9XsXbshpqrs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+<h2> Title: Kanye Quest Trailer (WIP) </h2>
+<h2> Medium: TvPaint, Adobe Animate, Adobe Premiere, Adobe Photoshop, Adobe After Effects</h2>
+<h2> Dimensions: 1920x1080p </h2>
 
 <body>
 <iframe width="1080" height="800" src="https://www.youtube.com/embed/2T0eq6Sz_nc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  
 </iframe>
+<img src="images/allegory final.png" alt="visual">
+<img src="images/beat board final.jpg" alt="beat board">
+<img src="images/shot37bgrd.jpg" alt="background">
+
     
     <p>
-    The concept of this animation came to me in a dream. It is incomplete because I was producing this animation for a 3 quarter production workshop at De Anza. From Fall 2017 to Summer 2018 I found free soundcloud tracks and cried as I struggled paying for the Creative Cloud subscription, moving from flash, to photoshop, then TVPaint! I had a bootleg TVpaint and struggled using that on my mac and having it crash.
- I find aesthetic inspiration from Humongous Entertainment CD ROM games that I grew up playing with like Spy Fox and Putt Putt. The dream was definitely influenced by my taste in music (AKA Kanye lol) Pikmin and my relationship with my family. There was a lot more to the dream but I had to trim the fat for the sake of a narrative for this project.
+    While I attended DeAnza College, I took three semesters to plan, draft and produce this short animation. The inspiration for this project literally came to me in a dream with a random yet strong plot that I strongly desired to visualize through animation. This “trailer” for an action-packed movie is 2D animated switching between using Adobe Animate and TvPaint, digitally drawn in Adobe Photoshop, utilized Adobe After Effects and pieced together using Adobe Premiere. I struggled finding animation software that ran smoothly on my Mac and could keep up with my PC, so I felt that the production of my project would have been more complete if I had the consistent working tools. 
 I wish more animation programs could run on mac, and were affordable! If my resources were consistent and reliable then this would be polished.
     </p>
+
 
 
 
